--- a/1_instruction_tuning/notebooks/chat_templates_example.ipynb
+++ b/1_instruction_tuning/notebooks/chat_templates_example.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "tnHzBR7vtFlr"
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -160,7 +160,120 @@
     "id": "Nrxh0oX6tFls",
     "outputId": "953e1527-8168-4346-9338-6e188ca31a1a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "69eb741077a84f159f494be3f43b0edb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/704 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "03a4df6c15f24c1da3a0c0e4f370709f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/269M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0d5a1a7e52b549e9a1d91e9488134de5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/111 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f2843f231ce74046acd2882bcf601b9f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/3.66k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "15e9c1bea00342e48a6620aa717d6116",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json:   0%|          | 0.00/801k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "709de0f3747d45f58ef899195d3be81e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "merges.txt:   0%|          | 0.00/466k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8cbbb27e9bc442e3bb6ca8ad416d0735",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/2.10M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c8cefa3d8dd448df991ac3552564ef29",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/831 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Dynamically set the device\n",
     "device = (\n",
@@ -179,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "id": "zkJwILrbtFls"
    },
@@ -208,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -248,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -292,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -332,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -342,6 +455,14 @@
     "outputId": "06deadc3-2c63-4660-d2bd-05096ef07c9f"
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/h5/3f5n5_zn3xb6n617dxdywnqw0000gn/T/ipykernel_65174/4068687702.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython.display\n",
+      "  from IPython.core.display import display, HTML\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -378,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -466,7 +587,36 @@
     "id": "4p3atw4_tFlu",
     "outputId": "62ee9812-3819-4a9c-9e24-5687368ffcd8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e4a4e956f6340e680319bb968e1d54a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/2260 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e26dab4166014df68803fd290a7c64d1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/119 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from datasets import load_dataset\n",
     "\n",
@@ -474,12 +624,44 @@
     "\n",
     "\n",
     "def process_dataset(sample):\n",
-    "    # TODO: 🐢 Convert the sample into a chat format\n",
-    "    # use the tokenizer's method to apply the chat template\n",
-    "    return sample\n",
+    "    sample = tokenizer.apply_chat_template(sample['messages'], tokenize=False, add_generation_prompt=False)\n",
+    "    return {\"content\": sample}\n",
     "\n",
     "\n",
     "ds = ds.map(process_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<|im_start|>user\n",
+      "Hey!<|im_end|>\n",
+      "<|im_start|>assistant\n",
+      "Hello! How can I help you today?<|im_end|>\n",
+      "<|im_start|>user\n",
+      "I'm planning a trip to Paris. What are some popular tourist attractions?<|im_end|>\n",
+      "<|im_start|>assistant\n",
+      "The Eiffel Tower, the Louvre Museum, and Notre Dame Cathedral are must-visit places in Paris.<|im_end|>\n",
+      "<|im_start|>user\n",
+      "That sounds great. Are there any local markets I should check out?<|im_end|>\n",
+      "<|im_start|>assistant\n",
+      "Yes, the Champs-Élysées Christmas Market and the Marché aux Puces de Saint-Ouen (flea market) are very popular among tourists and locals alike.<|im_end|>\n",
+      "<|im_start|>user\n",
+      "Awesome, thank you for the recommendations!<|im_end|>\n",
+      "<|im_start|>assistant\n",
+      "You're welcome! Have a great time in Paris!<|im_end|>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ds['test'][0]['content'])"
    ]
   },
   {
@@ -528,27 +710,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "id": "bWUSv7NMtFlu"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a23913f7c49e4c589c663b3417788b06",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/7473 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "19e0d7c1a39941a789ffcdd20fb55a86",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/1319 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['question', 'answer', 'content'],\n",
+       "        num_rows: 7473\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['question', 'answer', 'content'],\n",
+       "        num_rows: 1319\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ds = load_dataset(\"openai/gsm8k\", \"main\")\n",
     "\n",
     "\n",
     "def process_dataset(sample):\n",
-    "    # TODO: 🐕 Convert the sample into a chat format\n",
+    "    messages = [\n",
+    "        {\"role\": \"user\", \"content\": sample['question']},\n",
+    "        {\"role\": \"assistant\", \"content\": sample['answer']},\n",
+    "    ]\n",
+    "    sample = tokenizer.apply_chat_template(conversation=messages, tokenize=False)\n",
+    "    return {\"content\": sample}\n",
     "\n",
-    "    # 1. create a message format with the role and content\n",
-    "\n",
-    "    # 2. apply the chat template to the samples using the tokenizer's method\n",
-    "\n",
-    "    return sample\n",
-    "\n",
-    "\n",
-    "ds = ds.map(process_dataset)"
+    "ds = ds.map(process_dataset)\n",
+    "ds"
    ]
   },
   {
@@ -584,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.0"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
