notebooks: updated sft notebook

--- a/1_instruction_tuning/notebooks/chat_templates_example.ipynb
+++ b/1_instruction_tuning/notebooks/chat_templates_example.ipynb
@@ -23,20 +23,20 @@
    },
    "outputs": [],
    "source": [
-    "# Install the requirements in Google Colab\n",
-    "# !pip install transformers datasets trl huggingface_hub\n",
+    "# # Install the requirements in Google Colab\n",
+    "# # !pip install transformers datasets trl huggingface_hub\n",
     "\n",
-    "# Authenticate to Hugging Face\n",
-    "from huggingface_hub import login\n",
+    "# # Authenticate to Hugging Face\n",
+    "# from huggingface_hub import login\n",
     "\n",
-    "login()\n",
+    "# login()\n",
     "\n",
-    "# for convenience you can create an environment variable containing your hub token as HF_TOKEN"
+    "# # for convenience you can create an environment variable containing your hub token as HF_TOKEN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "id": "tnHzBR7vtFlr"
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -164,7 +164,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69eb741077a84f159f494be3f43b0edb",
+       "model_id": "eaf372639f0e43d28365f8a1b15eda17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -178,7 +178,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03a4df6c15f24c1da3a0c0e4f370709f",
+       "model_id": "c3d97120ca1b4080af5a834bed3d8e0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +192,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d5a1a7e52b549e9a1d91e9488134de5",
+       "model_id": "7a1c599ae8a349f0a5c6a7bf44ca9836",
        "version_major": 2,
        "version_minor": 0
       },
@@ -206,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2843f231ce74046acd2882bcf601b9f",
+       "model_id": "9ee561c0302740d2906b6db045ce6897",
        "version_major": 2,
        "version_minor": 0
       },
@@ -220,7 +220,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15e9c1bea00342e48a6620aa717d6116",
+       "model_id": "2b8878ee93c342e58aee49ce54e0a43d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,7 +234,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "709de0f3747d45f58ef899195d3be81e",
+       "model_id": "322fd10ae7604a1393895ebe4afc1111",
        "version_major": 2,
        "version_minor": 0
       },
@@ -248,7 +248,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8cbbb27e9bc442e3bb6ca8ad416d0735",
+       "model_id": "610489e654064b53a539624d207ac91a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -262,7 +262,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8cefa3d8dd448df991ac3552564ef29",
+       "model_id": "f2c0c4740393487d836440ecf39974a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,7 +292,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bos_token': '<|im_start|>',\n",
+       " 'eos_token': '<|im_end|>',\n",
+       " 'unk_token': '<|endoftext|>',\n",
+       " 'pad_token': '<|im_end|>',\n",
+       " 'additional_special_tokens': ['<|im_start|>', '<|im_end|>']}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.special_tokens_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "id": "zkJwILrbtFls"
    },
@@ -321,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -361,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -405,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -445,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -455,14 +479,6 @@
     "outputId": "06deadc3-2c63-4660-d2bd-05096ef07c9f"
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/h5/3f5n5_zn3xb6n617dxdywnqw0000gn/T/ipykernel_65174/4068687702.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython.display\n",
-      "  from IPython.core.display import display, HTML\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -482,7 +498,7 @@
     }
    ],
    "source": [
-    "from IPython.core.display import display, HTML\n",
+    "from IPython.display import display, HTML\n",
     "\n",
     "display(\n",
     "    HTML(\n",
@@ -499,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -591,7 +607,77 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e4a4e956f6340e680319bb968e1d54a",
+       "model_id": "a86b25e072e1412f81246aaf9c49ec91",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/9.72k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f59e9e36450245799e5ed1afc217c63e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "train-00000-of-00001.parquet:   0%|          | 0.00/946k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a95137fe7de843adbf33cd14b07a2368",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "test-00000-of-00001.parquet:   0%|          | 0.00/52.6k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aab6c1fa9e1f47a0a8070cd28f5f19d8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/2260 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1536a3a2fe274588b794d21eea56149e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split:   0%|          | 0/119 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2a2591d9e0524f589396e932a7938294",
        "version_major": 2,
        "version_minor": 0
       },
@@ -605,7 +691,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e26dab4166014df68803fd290a7c64d1",
+       "model_id": "7e83b1858e574b109762bbac505ee3f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -627,13 +713,12 @@
     "    sample = tokenizer.apply_chat_template(sample['messages'], tokenize=False, add_generation_prompt=False)\n",
     "    return {\"content\": sample}\n",
     "\n",
-    "\n",
     "ds = ds.map(process_dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -710,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true,
     "id": "bWUSv7NMtFlu"
@@ -719,7 +804,77 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a23913f7c49e4c589c663b3417788b06",
+       "model_id": "d9d07add1a264028a095acf4372e0865",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/7.94k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cd4c5881924c4a3cbff88410f1a1a8e7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "train-00000-of-00001.parquet:   0%|          | 0.00/2.31M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "65c6e0df9c8f46a5b6133e2cce30b5fd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "test-00000-of-00001.parquet:   0%|          | 0.00/419k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "95d2398cde124a4b8ec9c2b13b462072",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/7473 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c4ccb815d0244b6297c4328df8432dd6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split:   0%|          | 0/1319 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "628af12026fb43e994520e43cd7010c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -733,7 +888,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19e0d7c1a39941a789ffcdd20fb55a86",
+       "model_id": "fc39b0d0cef543d9ad8c00a9e22fd22f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -759,14 +914,13 @@
        "})"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ds = load_dataset(\"openai/gsm8k\", \"main\")\n",
-    "\n",
     "\n",
     "def process_dataset(sample):\n",
     "    messages = [\n",
@@ -813,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
