--- a/1_instruction_tuning/notebooks/sft_finetuning_example.ipynb
+++ b/1_instruction_tuning/notebooks/sft_finetuning_example.ipynb
@@ -309,7 +309,7 @@
     "    learning_rate=5e-5,  # Common starting point for fine-tuning\n",
     "    logging_steps=10,  # Frequency of logging training metrics\n",
     "    save_steps=200,  # Frequency of saving model checkpoints\n",
-    "    evaluation_strategy=\"steps\",  # Evaluate the model at regular intervals\n",
+    "    eval_strategy=\"steps\",  # Evaluate the model at regular intervals\n",
     "    eval_steps=50,  # Frequency of evaluation\n",
     "    use_mps_device=(\n",
     "        True if device == \"mps\" else False\n",
@@ -423,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
